upgrade to spring boot 3.2.0-RC2
TODO: in 26-11-2023, you should upgrade to spring boot 3.2.0
why?
- JdbcClient
- virtual threads